[package]
name = "aseprite-dmi"
version = "1.0.7"
edition = "2021"
repository = "https://github.com/Seefaaa/aseprite-dmi"

[lib]
name = "dmi"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.80"
arboard = "3.3.1"
base64 = "0.21.5"
image = { version = "0.24.7", default-features = false, features = ["png"] }
mlua = { version = "0.9.5", features = ["module", "lua54", "serialize"] }
native-dialog = "0.7.0"
png = "0.17.11"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.108"
sysinfo = "0.30.5"
thiserror = "1.0.56"
webbrowser = "0.8.12"
