[package]
name = "aseprite-dmi"
version = "1.0.7"
edition = "2021"
repository = "https://github.com/Seefaaa/aseprite-dmi"

[lib]
name = "dmi"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.80"
arboard = "3.3.1"
base64 = "0.21.7"
image = { version = "0.24.9", default-features = false, features = ["png"] }
mlua = { version = "0.9.5", features = ["module", "lua54", "serialize"] }
native-dialog = "0.7.0"
png = "0.17.13"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sysinfo = "0.30.5"
thiserror = "1.0.57"
webbrowser = "0.8.12"
