[package]
name = "aseprite-dmi"
version = "1.0.7"
edition = "2021"
repository = "https://github.com/Seefaaa/aseprite-dmi"

[lib]
name = "dmi"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.81"
arboard = "3.3.2"
base64 = "0.21.7"
image = { version = "0.24.9", default-features = false, features = ["png"] }
mlua = { version = "0.9.6", features = ["module", "lua54", "serialize"] }
native-dialog = "0.7.0"
png = "0.17.13"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sysinfo = "0.30.5"
thiserror = "1.0.58"
webbrowser = "0.8.12"
